--- a/models/deepspa/dockerfiles/Dockerfile
+++ b/models/deepspa/dockerfiles/Dockerfile
@@ -12,18 +12,22 @@ RUN git clone https://github.com/FJDorfner/Anatomy-Aware-Classification-axSpA.gi
 # Copy the current directory contents into the container at /app
 COPY . /app
 
-# Install any needed packages specified in requirements_small.txt 
-RUN pip install -r /app/Anatomy-Aware-Classification-axSpA/gradio_code/requirements_small.txt && \
-    pip uninstall opencv-python -y && \
-    pip install opencv-contrib-python-headless==4.5.5.64
+# Modify requirements_small.txt to remove version constraint for numpy, this is necessary to run in the mhub image.
+RUN sed -i '/numpy/d' /app/Anatomy-Aware-Classification-axSpA/gradio_code/requirements_small.txt && \
+    echo "\nnumpy" >> /app/Anatomy-Aware-Classification-axSpA/gradio_code/requirements_small.txt
 
+# Install any needed packages specified in requirements_small.txt 
+RUN pip install --no-cache-dir -r /app/Anatomy-Aware-Classification-axSpA/gradio_code/requirements_small.txt && \
+    pip uninstall opencv-python -y && \
+    pip install --no-cache-dir opencv-contrib-python-headless==4.5.5.64 
+    
 # Download the model files from Zenodo using curl
-RUN curl -o /app/Anatomy-Aware-Classification-axSpA/gradio_code/classification_model.ckpt -L https://zenodo.org/record/11116990/files/classification_model.ckpt
-RUN curl -o /app/Anatomy-Aware-Classification-axSpA/gradio_code/segmentation_model.pt -L https://zenodo.org/record/11116990/files/segmentation_model.pt
+RUN curl -o /app/classification_model.ckpt -L https://zenodo.org/record/11116990/files/classification_model.ckpt
+RUN curl -o /app/segmentation_model.pt -L https://zenodo.org/record/11116990/files/segmentation_model.pt
 
 # Add code base to python path
-ENV PYTHONPATH="/deepspa:/app"
+ENV PYTHONPATH="/app/Anatomy-Aware-Classification-axSpA/gradio_code"
 
 # Default entrypoint
-ENTRYPOINT ["python3", "-m", "mhubio.run"]
+ENTRYPOINT ["mhubio.run"]
 CMD ["--config", "/app/models/deepspa/config/default.yml"]
